--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "@noumenadigital/create-npl",
-  "version": "1.0.0",
-  "description": "Create NPL frontend projects with a single command",
-  "bin": {
-    "create-npl": "./bin/create-npl.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "npl",
-    "frontend",
-    "scaffold",
-    "init"
-  ],
-  "author": "Noumena Digital",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/noumenadigital/create-npl-frontend.git"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "chalk": "^5.4.1",
-    "commander": "^14.0.0",
-    "fs-extra": "^11.3.0",
-    "inquirer": "^12.7.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "type": "module"
+    "name": "@noumenadigital/create-npl",
+    "private": true,
+    "version": "0.0.1",
+    "description": "A CLI to create a new NPL frontend project",
+    "main": "dist/index.js",
+    "bin": {
+        "create-npl": "./dist/index.js"
+    },
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/index.js"
+    },
+    "keywords": [
+        "npl",
+        "noumena"
+    ],
+    "author": "Noumena",
+    "license": "Apache-2.0",
+    "dependencies": {
+        "axios": "^1.10.0",
+        "chalk": "^5.3.0",
+        "execa": "^8.0.1",
+        "fs-extra": "^11.2.0",
+        "mustache": "^4.2.0",
+        "yargs": "^17.7.2"
+    },
+    "devDependencies": {
+        "@types/fs-extra": "^11.0.4",
+        "@types/mustache": "^4.2.5",
+        "@types/node": "^20.12.12",
+        "@types/yargs": "^17.0.32",
+        "typescript": "^5.4.5"
+    }
 } 
