--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "test": "bash test/smoke-test.sh"
     },
     "keywords": [
         "npl",
@@ -30,6 +31,7 @@
         "@types/mustache": "^4.2.5",
         "@types/node": "^20.12.12",
         "@types/yargs": "^17.0.32",
+        "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
     }
-} 
+}
