--- a/templates/package.json
+++ b/templates/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "{{name}}",
+    "name": "nplinit",
     "private": true,
     "version": "0.0.1",
     "type": "module",
@@ -8,17 +8,14 @@
         "build": "tsc && vite build",
         "format": "prettier . --write",
         "format:ci": "prettier . --check",
-        "preview": "vite preview",
-        "generate-client": "openapi-generator-cli generate --generator-name typescript-axios --additional-properties=useSingleRequestParameter=true --input-spec openapi/{{package}}-openapi.json --output generated"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
-        "@fontsource/roboto": "^5.1.0",
         "@mui/icons-material": "^6.2.0",
         "@mui/material": "^6.2.0",
         "@react-keycloak/web": "^3.4.0",
-        "axios": "^1.10.0",
         "event-source-polyfill": "^1.0.31",
         "keycloak-js": "24.0.2",
         "react": "^18.3.1",
@@ -26,7 +23,7 @@
         "react-router-dom": "^7.0.2"
     },
     "devDependencies": {
-        "@openapitools/openapi-generator-cli": "^2.11.0",
+        "@hey-api/openapi-ts": "^0.79.2",
         "@types/event-source-polyfill": "^1.0.5",
         "@types/node": "^22.13.4",
         "@types/react": "^18.3.1",
@@ -38,7 +35,6 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "prettier": "3.4.2",
-        "sharp": "^0.33.5",
         "typescript": "^5.7.2",
         "vite": "^6.0.3"
     }
